k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proyecto
  namespace: 
spec:
  selector:
    matchLabels:
      app: proyecto
  replicas: 1
  template:
    metadata:
      labels:
        app: proyecto
    spec:
      imagePullSecrets:
        - name: github-secret
      containers:
        - name: proyecto
          image: localhost:5000/proyecto:latest
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: proyecto
  namespace: 
spec:
#  type: ClusterIP
  selector:
    app: proyecto
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      # nodePort: 30001
