k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proyecto
  namespace: 
spec:
  ingressClassName: public
  rules:
    - host:   
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proyecto
                port:
                  number: 8080
